--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,7 +2,7 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
-application.title=Dibujar con KeyEvent
+application.title=6. Evento KeyEvent - Dibujando figuras
 application.vendor=Virus
 endorsed.classpath=
 #Sun Jun 10 17:36:15 CDT 2018
@@ -33,7 +33,7 @@ build.test.classes.dir=${build.dir}/test/classes
 platform.active=default_platform
 javac.compilerargs=
 main.class=Main
-dist.jar=${dist.dir}/Dibujar_con_KeyEvent.jar
+dist.jar=${dist.dir}/6._Evento_KeyEvent_-_Dibujando_figuras.jar
 javadoc.use=true
 build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
